--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
       <section>
       <img src="https://www.iucn.org/sites/default/files/styles/what_we_do_large/public/images-themes/biodiversity-shutterstock_1477256246.jpg.webp?itok=4i9JdtFu" alt="Nature">
     </section>
+    <h2>Contact Us</h2>
+<div class="form-div">
+    <form action="https://formspree.io/f/mlevooro" method="POST">
+<br action="/action_page.php">
+  <label for="fname">Full name</label><br>
+  <input type="text" id="fname" name="fname" required ><br>
+  <label for="Email">Email</label><br>
+  <input type="text" id="Email" name="Email" required ><br><br>
+  <label for="Message">Message</label><br>
+  <textarea name="Message" id="Message" cols="30" rows="3" required></textarea>
+  <input class="sub" type="submit" value="Submit">
+</form> 
+</div>
     </main>
     <footer>Copyright &copy; 2022</footer>
   </body>
