--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
     </header>
     <main>
-      <div class="container">
+      <div class="containered">
         <h2>My Home</h2>
         <h5>About Me</h5>
         <h1>More</h1>
@@ -40,6 +40,29 @@
   <textarea name="Message" id="Message" cols="30" rows="3" required></textarea>
   <input class="sub" type="submit" value="Submit">
 </form> 
+</div>
+<div class="grid-container">
+    <div class="col">
+<h1 class="content">Main content 1</h1>
+<p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate facilis ad ex enim, repudiandae quibusdam consequatur libero iure. Expedita consequatur vitae ab provident enim nihil dolorum? Neque consequuntur autem quae!</p>
+    </div>
+    <div class="col2">
+      <h1 class="content">Content 2</h1>
+      <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae minima id sunt, voluptates eum voluptas neque cumque, quam quibusdam, accusantium minus. Suscipit, vero dolore velit esse culpa possimus dicta iusto.</p>
+    </div>
+  </div>
+</div>
+<div class="flex-container">
+  <div class="prop">
+    <h1 class="content">Peacock</h1>
+<img src="https://m.economictimes.com/thumb/msid-74171981,width-1200,height-900,resizemode-4,imgsize-1195643/peacock-wiki.jpg" alt="Peacock">
+<p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dignissimos quia animi, exercitationem suscipit, hic placeat, voluptates quod voluptatum accusantium enim eius inventore ipsum. Quae perspiciatis nam adipisci officiis molestiae!</p>
+  </div>
+  <div class="prop">
+    <h1 class="content">Parrot</h1>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoUF1tz_4boYo88ntvkDVAd-dE_UUe6qA-qOR79CciUygR6bgQU2gv-S8kCLYFkHr6BIw&usqp=CAU" alt="bird">
+<p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid distinctio veritatis vitae corporis delectus? Magni accusamus labore animi asperiores molestias temporibus veniam, ipsum unde sapiente dolores, suscipit, esse voluptatum doloremque.</p>
+  </div>
 </div>
     </main>
     <footer>Copyright &copy; 2022</footer>
